--- a/Trabalho Final/trab/CMakeLists.txt
+++ b/Trabalho Final/trab/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 2.6)
 
-set(PROJECT_NAME "Trabalho Final" CACHE STRING "Trabalho Final")
+set(PROJECT_NAME "Trabalho" CACHE STRING "Projeto")
 
 project (${PROJECT_NAME})
 
